# rpi_pico_works

./: README.md
test_proj/: CMakeLists.txt  button.c  button.h  lwipopts.h  main.c  oled_manager.c  oled_manager.h  paint.c  paint.h  test.c  test_functionality.c  test_functionality.h  usr_commands.c  usr_commands.h  usr_input.c  usr_input.h  watchdog.c  watchdog.h  wifi.c  wifi.h
test_proj/gui/: CMakeLists.txt  gui_item_interface.h  gui_list.c  gui_list.h  gui_manager.c  gui_manager.h  gui_text_input.c  gui_text_input.h  gui_textbox.c  gui_textbox.h
test_proj/inet/: CMakeLists.txt
test_proj/inet/access_point/: CMakeLists.txt  picow_access_point.c  picow_access_point.h
test_proj/inet/access_point/dhcpserver/: dhcpserver.c
test_proj/inet/access_point/dnsserver/: dnsserver.c
test_proj/inet/tcp_recv_picture/: CMakeLists.txt  tcp_recv_picture.c  tcp_recv_picture.h
test_proj/misc/: CMakeLists.txt  embedded_sponge.jpg.c  game_of_life.c  game_of_life.h  misc_manager.c  misc_manager.h  picture.c  picture.h  screen_saver.c  screen_saver.h  wifi_scan.c  wifi_scan.h
test_proj/misc/game_of_life/: game_of_life.c
test_proj/misc/misc_test/: misc_test.c  misc_test.h
test_proj/misc/picture/: picture_buffer.c
test_proj/misc/screen_saver/: screen_saver.c  screen_saver.h
test_proj/misc/tamagotchi/: tamagotchi.c  tamagotchi.h
test_proj/misc/wifi_scan/: wifi_scan.c  wifi_scan.h
test_proj/oled_lib/Config/: CMakeLists.txt  DEV_Config.c
test_proj/oled_lib/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
test_proj/oled_lib/OLED/: CMakeLists.txt
test_proj/tools/: basic_tcp_client.py  basic_tcp_server.py  image_handler.py  util.py
test_proj/tools/tamagotchi_files/: baby1_idle.aseprite
test_proj/util/: CMakeLists.txt  bitmap.c  bitmap.h
